# Deflate

./: CMakeLists.txt  README.md  main.cpp  main.h
Test/: Test_File_Generator.cpp  Test_File_Generator.h  Test_LZ77.cpp  Test_LZ77.h
deflate/: Huffman.cpp  Huffman.h  LZ77.cpp  LZ77.h  Node.cpp  Node.h
